- Separate the daemon engine from the OS interactions to make unit-testable.
- Setup clang format and use raw-string-literal decoration support.
- Add loglevel to daemon to reduce spam of weboscket messages.
- Create log function that will automatically handle whether or not to log based on loglevel.
- Refactor engine and daemon binary to internalize each component.

2025-Dec-21:
- Initialize project
  - Create browser extension for forwarding browser tab events.
  - Create daemon for handling websocket server and controlling the
    application GUI.
- Start prototype GUI SwiftUI (inside app/ dir).
- Using Unix Domain Sockets (UDS) to communicate b/w the daemon and the GUI.
- Using Carbon to register global keybind (Ctrl+Shift+J for now) to trigger program callback.
- Daemon controls the process of the TabManager GUI.

TODO:
- Restrict triggering of global keybind to only browser sessions.
- Use case 1: creation of new task
  - Sketch out workflow of creating a new task and assigning tabs to each task.
- Use nullability annotation and in/out annotation for C function parameters.
- Use C attributes to annotate sync objects.
- Figure out how to make the websocket connection happen all the time on startup. Currently,
  the extension's service worker sometimes need to be woken up.
- Treat tabs.onHighlight as tab activation.
- When in search mode, do not make the list selectable or navigateable until the search is
  confirmed or canceled.
- Color/label tabs that are associated with the currently focused browser window.
- Add confirmation for serious actions such as closing multiple tabs.
- Marked tabs should create a tab group in the browser.
- Mark all tabs older than N hours/days/weeks.
- Unify accent color of GUI.
- Remove label from single/select tab & Remove label from all tabs.
- Save labels and tab information to local appdata.
- Debug close behavior on chrome.
- Carve out use case of having multiple browsers connected to socket.