@@ -15,9 +15,9 @@
     <key>RunAtLoad</key>
     <true/>
     <key>StandardOutPath</key>
-    <string>/tmp/lotab.stdout.log</string>
+    <string>@LOG_HOME@/Library/Logs/lotab/stdout.log</string>
     <key>StandardErrorPath</key>
-    <string>/tmp/lotab.stderr.log</string>
+    <string>@LOG_HOME@/Library/Logs/lotab/stderr.log</string>
     <key>EnvironmentVariables</key>
     <dict>
         <key>PATH</key>
